# 4059_finalproj

./: .gitignore  CMakeLists.txt  Project Abstract.txt  README.md  analysis_results.md  analysis_results_en.md  analysis_results_zh.md  project_checkpoint.md  project_checkpoint_bei_jin.txt  requirements.txt
include/: cuda_utils.h  matrix_ops.h
src/host/: main.cpp
src/kernel/: matrix_ops.cu  vector_add.cu
tests/: CMakeLists.txt  matrix_ops_test.cu  vector_add_test.cu
